feature: Phase 2.1 CBTRN02C batch port and Java quality rework
Co-Authored-By: Joe Benson <joe.benson@cognition.ai>